--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -20,53 +20,14 @@
         </li>
 
 
-        <li class="dropdown loginDropdown">
-
-          <a class="dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
+        <li class="dropdown loginDropdown" dropdown [insideClick]="true">
+          <a class="dropdown-toggle" dropdownToggle role="button" id="dropdownMenuLink" aria-controls="dropdown-basic">
             <span> Log in</span>
           </a>
 
-          <div class="dropdown-menu login-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+          <div id="dropdown-basic" *dropdownMenu class="dropdown-menu login-menu dropdown-menu-right" role="menu" aria-labelledby="dropdownMenuLink">
             <baf-login-form></baf-login-form>
           </div>
-
-          <!-- <div class="dropdown-menu login-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-            <form class="login-form">
-              <div class="login-box">
-
-                <div class="form-group">
-                  <input autocomplete="off" maxlength="100" class="form-control" type="text"
-                    placeholder="Username/Email" />
-                </div>
-                <div class="form-group">
-                  <input autocomplete="off" maxlength="128" required class="form-control" type="password"
-                    placeholder="Password" />
-                </div>
-                <div class="remember-me">
-                  <div class="form-check pull-left">
-                    <input type="checkbox" class="form-check-input" id="chk-remeber-me">
-                    <label class="form-check-label" for="chk-remeber-me"></label>
-                    <label class="form-check-label" for="chk-remeber-me">Remember me</label>
-                  </div>
-                  <p class="message pull-right"><a [routerLink]="'forgotpassword'">Forgot Password?</a></p>
-                </div>
-              </div>
-              <div class="login-bar">
-                <button type="submit" class="btn btn-default">
-                  <span>Login&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
-                  <span>Login</span>
-                </button>
-              </div>
-              <div class="login-create">
-                <p class="message pull-left"><a style="cursor: default;" class="bf">Don’t have an account?</a></p>
-                <a class="pull-right" [routerLink]="'register'">Create account</a>
-              </div>
-            </form>
-          </div> -->
-
-
-
         </li>
 
         <li class="dropdown accountDropdown">
