--- a/src/app/modules/shared/components/login/login-form.component.html
+++ b/src/app/modules/shared/components/login/login-form.component.html
@@ -1,5 +1,11 @@
 <form class="login-form" [formGroup]="loginForm" (ngSubmit)="authUserLogin()">
   <div class="login-box">
+    <div class="alert alert-danger" *ngIf="authError">
+      <strong>Error! </strong>{{authError}}
+    </div>
+    <div class="alert alert-success" *ngIf="authSuccess">
+      <strong>Success! </strong>{{authSuccess}}
+    </div>
     <div class="form-group">
       <input formControlName="email" autocomplete="off" maxlength="100" class="form-control" type="text"
         placeholder="Username/Email" />
@@ -7,7 +13,8 @@
     <!-- <p class="small text-danger" *ngIf="!loginForm.get('email').valid">Email</p> -->
 
     <div class="form-group">
-      <input formControlName="password" autocomplete="off" maxlength="128" required class="form-control" type="password" placeholder="Password" />
+      <input formControlName="password" autocomplete="off" maxlength="128" required class="form-control" type="password"
+        placeholder="Password" />
     </div>
     <div class="remember-me">
       <div class="form-check pull-left">
@@ -19,7 +26,7 @@
     </div>
   </div>
   <div class="login-bar">
-    <button type="submit" class="btn btn-default" [disabled]="!loginForm.valid">
+    <button type="button" class="btn btn-default" [disabled]="!loginForm.valid">
       <span *ngIf="showLoading">Login&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
       <span *ngIf="!showLoading">Login</span>
     </button>
