--- a/src/assets/stylesheets/partials/_header.scss
+++ b/src/assets/stylesheets/partials/_header.scss
@@ -138,7 +138,7 @@
                             padding-right: 0;
                         }
                         .dropdown-menu.login-menu {
-                            left: -20px !important;
+                            // left: -20px !important;
                             width: 380px;
                             /*right: 0 !important;*/
                             margin-top: 10px;
@@ -211,7 +211,7 @@
                                                 height: 16px;
                                                 background: #fff;
                                                 position: absolute;
-                                                left: 0;
+                                                left: 18px;
                                                 margin-top: 3px;
                                                 border: 1px solid #e4e4e4;
                                             }
@@ -237,7 +237,8 @@
                                                 }
                                             }
                                             &+label+label{
-                                                color:$b3; font-size:1em; margin-left: 6px;
+                                                color:$b3; font-size:1em;
+                                                // margin-left: 6px;
                                             }
                                         }
                                     }
