--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -1,1 +1,110 @@
-<p>register works!</p>
+<main class="login-main">
+    <div class="container">
+        <div class="login-page register-main">
+            <div class="form">
+                <form class="login-form" [formGroup]="registrationForm" (ngSubmit)="registration()">
+                    <div>
+                        <div class="login-logo">
+                            <a [routerLink]=""><img src="assets/images/logo.png" alt="img"></a>
+                        </div>
+                        <p>Create account</p>
+                        <!-- <div class="alert alert-danger">
+                            <strong>Error! </strong>{{authError}}
+                        </div> -->
+                        <div class="row">
+                            <!--                        <div class="col-sm-6">
+                                                        <input required="" autocomplete="off" name="username" type="text" placeholder="Username *" ng-model="user.username"/>
+                                                        <span style="color:red" ng-show="userForm.username.$dirty && userForm.username.$invalid">
+                                                            <span ng-show="userForm.username.$error.required">Username is required.</span>
+                                                        </span>
+                                                    </div>   -->
+                            <div class="col-sm-6">
+                                <input maxlength="50" required="" formControlName="firstName" autocomplete="off"
+                                    name="firstname" type="text" placeholder="First Name *" />
+                                <!-- <span style="color:red;" *ngIF="registrationForm.firstname.$dirty && registrationForm.firstname.$invalid">
+                                    <span ng-show="userForm.firstname.$error.required">First name is required.</span>
+                                </span> -->
+                            </div>
+
+                            <div class="col-sm-6">
+                                <input required="" maxlength="50" autocomplete="off" formControlName="lastName"
+                                    name="lastname" type="text" placeholder="Last Name *" />
+                                <!-- <span style="color:red" ng-show="userForm.lastname.$dirty && userForm.lastname.$invalid">
+                                    <span ng-show="userForm.lastname.$error.required">Last name is required.</span>
+                                </span> -->
+                            </div>
+                            <div class="col-sm-6">
+                                <input required="" maxlength="100" autocomplete="off" formControlName="email"
+                                    name="email" type="email" placeholder="Email *" />
+                                <!-- <span style="color:red" ng-show="userForm.email.$dirty && userForm.email.$invalid && userForm.email.$touched">
+                                    <span ng-show="userForm.email.$error.required">Email is required.</span>
+                                    <span ng-show="userForm.email.$error.email">Invalid email address.</span>
+                                </span> -->
+                            </div>
+
+                            <div class="col-sm-6">
+                                <input autocomplete="off" maxlength="100" formControlName="affiliation"
+                                    name="affiliation" type="text" placeholder="Affiliation" />
+                            </div>
+                            <div class="col-sm-6">
+                                <input autocomplete="off" maxlength="100" formControlName="location" name="location"
+                                    type="text" placeholder="Location" />
+                            </div>
+                            <div class="col-sm-6">
+                                <input autocomplete="off" maxlength="100" formControlName="phone" name="phonenumber"
+                                    type="text" placeholder="Phonenumber" />
+                            </div>
+                            <div class="col-md-12">
+                                <p class="info">Password must contain 1 upper case character, 1 lower case character and
+                                    1 digit.</p>
+                            </div>
+                            <div class="col-sm-6">
+                                <input readonly maxlength="128" onfocus="this.removeAttribute('readonly');" required
+                                    id="password" autocomplete="off" formControlName="password" name="password"
+                                    type="password" placeholder="Password *" />
+                                <!-- <span style="color:red" ng-show="userForm.password.$dirty && userForm.password.$invalid && userForm.password.$touched">
+                                    <span ng-show="userForm.password.$error.required && userForm.password.$dirty">required</span>
+                                    <span ng-show="!userForm.password.$error.required && (userForm.password.$error.minlength || userForm.password.$error.maxlength) && userForm.password.$dirty">Passwords must be between 6 and 20 characters.</span>
+                                    <span ng-show="!userForm.password.$error.required && !userForm.password.$error.minlength && !userForm.password.$error.maxlength && userForm.password.$error.pattern && userForm.password.$dirty">Password must contain 1 upper case character, 1 lower case character and 1 digit.</span>
+                                </span> -->
+                            </div>
+                            <div class="col-sm-6">
+                                <input readonly maxlength="128" onfocus="this.removeAttribute('readonly');" required
+                                    autocomplete="off" id="confirmpassword" pw-check='password'
+                                    formControlName="confirmPassword" name="confirmpassword" type="password"
+                                    placeholder="Confirm Password *" />
+                                <!-- <span style="color:red" ng-show="userForm.confirmpassword.$dirty && userForm.confirmpassword.$invalid && userForm.password.$dirty  && userForm.confirmpassword.$touched">
+                                    <span ng-show="userForm.confirmpassword.$error.required && userForm.confirmpassword.$dirty">Please confirm your password.</span>
+                                    <span ng-show="!userForm.confirmpassword.$error.required && userForm.confirmpassword.$error.pwmatch">Passwords do not match.</span>
+                                </span> -->
+                            </div>
+                            <div class="col-sm-12">
+                                <button [disabled]="!registrationForm.valid">Create Account</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <p class="message pull-left"><a [routerLink]="['/userLogin']">Login</a></p>
+                        <p class="message pull-right"><a href="">Dashboard</a></p>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="login-page" *ngIf="isRegister">
+            <div class="thankyou-box">
+                <div class="thankyou-dead">
+                    <img src="assets/images/tick.png" alt="">
+                </div>
+                <div class="thankyou-text">
+                    <h1>You're almost done! </h1>
+                    <!-- <p class="mb-0">{{authSuccess}}</p> -->
+                    <div class="navigation-links">
+                        <p class="message"><a [routerLink]="''">Login</a></p>
+                        <p class="message"><a [routerLink]="">Dashboard</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
